--- a/sergi_web/mkdocs.yml
+++ b/sergi_web/mkdocs.yml
@@ -1,1 +1,9 @@
-site_name: My Docs
+site_name: Sergio
+
+theme:
+  name: readthedocs
+  nav_style: dark
+
+nav:
+  - Inicio: "index.md"
+  - Documentacion: "documentacion.md"
